Added more to the Sunrise hour calculation.  Apart from the missing binaryToBcd() conversion, it's now complete.

--- a/src/firmware/SunriseSunset/Makefile
+++ b/src/firmware/SunriseSunset/Makefile
@@ -13,6 +13,9 @@ OBJ_FILES=\
 	DayOfYearState.o \
 	CurveFitStates.o \
 	SunriseLatitudeAdjustmentState.o \
+	SunriseLongitudeAdjustmentState.o \
+	AccumulatorToTimeStates.o \
+	SunriseStoreStates.o \
 	SunsetStoreStates.o
 
 all: $(LIB_FILENAME)
