I've tried the accurate Sunrise / Sunset algorithm.  I've tried the curve-fitting Sunrise / Sunset algorithm.  Now it's time for The Third Way - trusty LUTs and interpolation !  Hopefully this will result in a smaller flash footprint as the CORDIC engine can also be dispensed with.

--- a/src/utilities/sunrise-sunset/Makefile
+++ b/src/utilities/sunrise-sunset/Makefile
@@ -1,7 +1,9 @@
 all:
 	$(MAKE) -C accurate all
 	$(MAKE) -C curve-fitting all
+	$(MAKE) -C lookup all
 
 clean:
 	$(MAKE) -C accurate clean
 	$(MAKE) -C curve-fitting clean
+	$(MAKE) -C lookup clean
