--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /src/utilities/mean/mean
 /src/utilities/sunrise-sunset/accurate/sunrise-sunset
 /src/utilities/sunrise-sunset/curve-fitting/curve-fit
+/src/utilities/sunrise-sunset/lookup/lookup
 /src/utilities/trigonometry/cordic/cordic-float
 /src/utilities/trigonometry/cordic/cordic-fixed
 /src/utilities/trigonometry/smoothstep/smoothstep
