Moving Sunrise / Sunset calculations from a curve-fitting implementation to a lookup interpolation implementation in a bid to save flash (the CORDIC engine will no longer be required, for example).  Still a work-in-progress; long overdue check-in.

--- a/src/firmware/SunriseSunset/Makefile
+++ b/src/firmware/SunriseSunset/Makefile
@@ -2,24 +2,22 @@ LIB_FILENAME=../SunriseSunset.a
 OBJ_FILES=\
 	Registers.o \
 	RegisterLoadAndStore.o \
-	Coefficients.o \
+	LookupTables.o \
 	Initialise.o \
 	CalculateSunriseAndSunset.o \
 	Poll.o \
+	SignedMultiply.o \
+	LoadLookupTableEntryFromFlash.o \
 	UninitialisedState.o \
 	IdleState.o \
 	CalculateSunriseState.o \
-	SunriseLimitDayOfYearState.o \
-	DayOfYearState.o \
-	CurveFitStates.o \
-	SunriseLatitudeAdjustmentState.o \
-	SunriseLongitudeAdjustmentState.o \
+	SunriseLoadLookupsStates.o \
+	LoadLookupsStates.o \
+	InterpolationStates.o \
 	AccumulatorToTimeStates.o \
 	SunriseStoreStates.o \
 	CalculateSunsetState.o \
-	SunsetLimitDayOfYearState.o \
-	SunsetLatitudeAdjustmentState.o \
-	SunsetLongitudeAdjustmentState.o \
+	SunsetLoadLookupsStates.o \
 	SunsetStoreStates.o
 
 all: $(LIB_FILENAME)
