Removed the CORDIC engine now that Sunrise / Sunset are based on linear interpolation.  This saves 458 program words.

--- a/src/firmware-tests/SunriseSunset/Makefile
+++ b/src/firmware-tests/SunriseSunset/Makefile
@@ -9,10 +9,7 @@ export OBJ_FILES=\
 	$(FIRMWARE_DIR)/Platform/Arithmetic32.a \
 	$(FIRMWARE_DIR)/Platform/ArithmeticBcd.a \
 	$(FIRMWARE_DIR)/Platform/Flash.o \
-	$(FIRMWARE_DIR)/Platform/Cordic.a \
-	$(CURDIR)/ClockStubs.o \
-	$(CURDIR)/../Platform/Cordic/InitialiseAfterCordicDummy.o \
-	$(CURDIR)/../Platform/Cordic/PollAfterCordicDummy.o
+	$(CURDIR)/ClockStubs.o
 
 TEST_DOUBLE_OBJ_FILES=\
 	InitialiseAfterSunriseSunsetMock.o \
