Split InterpolationStates.asm into several files.

--- a/src/firmware/SunriseSunset/Makefile
+++ b/src/firmware/SunriseSunset/Makefile
@@ -13,7 +13,9 @@ OBJ_FILES=\
 	CalculateSunriseState.o \
 	SunriseLoadLookupsStates.o \
 	LoadLookupsStates.o \
-	InterpolationStates.o \
+	LookupInterpolationStates.o \
+	LatitudeInterpolationStates.o \
+	LongitudeInterpolationStates.o \
 	AccumulatorToTimeStates.o \
 	SunriseStoreStates.o \
 	CalculateSunsetState.o \
