Added a skeleton Door module.

--- a/src/firmware-tests/Makefile
+++ b/src/firmware-tests/Makefile
@@ -23,11 +23,13 @@ all: $(TEST_DOUBLE_OBJ_FILES)
 	$(MAKE) -C Platform all
 	$(MAKE) -C Ui all
 	$(MAKE) -C SunriseSunset all
+	$(MAKE) -C Door all
 
 clean:
 	$(RM) -f $(BUILD_ARTEFACT_PATTERN)
 	$(MAKE) -C Platform clean
 	$(MAKE) -C Ui clean
 	$(MAKE) -C SunriseSunset clean
+	$(MAKE) -C Door clean
 
 include $(MAKEFILE_RULES)
