Started to add the motor control code.

--- a/src/firmware-tests/Platform/Lcd/Contrast/Makefile
+++ b/src/firmware-tests/Platform/Lcd/Contrast/Makefile
@@ -21,6 +21,7 @@ TEST_DOUBLE_OBJ_FILES=\
 	../../Motor/EnableMotorVddDummy.o \
 	../../Motor/DisableMotorVddDummy.o \
 	../../Motor/IsMotorVddEnabledDummy.o \
+	../../Motor/TurnMotorDummies.o \
 	../../Isr/InitialiseAfterIsrDummy.o \
 	../../Adc/InitialiseAfterAdcDummy.o \
 	../../Clock/PollAfterClockDummy.o
