--- a/src/firmware/Platform/Motor/Makefile
+++ b/src/firmware/Platform/Motor/Makefile
@@ -1,8 +1,14 @@
 LIB_FILENAME=../Motor.a
 OBJ_FILES=\
+	Registers.o \
 	Initialise.o \
 	EnableDisable.o \
-	Poll.o
+	Poll.o \
+	DisabledState.o \
+	IdleState.o \
+	WaitState.o \
+	SoftStartStates.o \
+	Turn.o
 
 all: $(LIB_FILENAME)
 
