--- a/src/firmware-tests/Platform/Motor/Turn/AntiClockwise/Makefile
+++ b/src/firmware-tests/Platform/Motor/Turn/AntiClockwise/Makefile
@@ -3,11 +3,12 @@ HEX_FILES=\
 
 PWM_DUTY_CYCLE_FROM_REST_OBJ_FILES=\
 	PwmDutyCycleFromRestTest.o \
-	../../Smps/EnableSmpsDummy.o \
-	../../Smps/DisableSmpsDummy.o \
-	../../Smps/IsSmpsEnabledStub.o \
-	../../Smps/PollSmpsDummy.o \
-	../PollAfterMotorDummy.o
+	../PwmDutyCycleFromRestTest.o \
+	../../../Smps/EnableSmpsDummy.o \
+	../../../Smps/DisableSmpsDummy.o \
+	../../../Smps/IsSmpsEnabledStub.o \
+	../../../Smps/PollSmpsDummy.o \
+	../../PollAfterMotorDummy.o
 
 all: $(HEX_FILES)
 
