Added soft stop and reversal for the motor.

--- a/src/firmware-tests/Platform/Motor/Turn/Makefile
+++ b/src/firmware-tests/Platform/Motor/Turn/Makefile
@@ -1,5 +1,6 @@
 TEST_FIXTURE_OBJ_FILES=\
-	PwmDutyCycleFromRestTest.o
+	PwmDutyCycleFromRestTestFixture.o \
+	PwmDutyCycleForReverseTestFixture.o
 
 all: $(TEST_FIXTURE_OBJ_FILES)
 	$(MAKE) -C Clockwise all
