--- a/src/firmware/Platform/Motor/Makefile
+++ b/src/firmware/Platform/Motor/Makefile
@@ -8,6 +8,8 @@ OBJ_FILES=\
 	IdleState.o \
 	WaitState.o \
 	SoftStartStates.o \
+	SoftStopStates.o \
+	ReverseStates.o \
 	Turn.o
 
 all: $(LIB_FILENAME)
