--- a/src/firmware-tests/Platform/Motor/Turn/Clockwise/Makefile
+++ b/src/firmware-tests/Platform/Motor/Turn/Clockwise/Makefile
@@ -1,14 +1,23 @@
 HEX_FILES=\
-	PwmDutyCycleFromRestTest.hex
+	PwmDutyCycleFromRestTest.hex \
+	PwmDutyCycleForReverseTest.hex
 
-PWM_DUTY_CYCLE_FROM_REST_OBJ_FILES=\
-	PwmDutyCycleFromRestTest.o \
-	../PwmDutyCycleFromRestTest.o \
+TEST_DOUBLE_OBJ_FILES=\
 	../../../Smps/EnableSmpsDummy.o \
 	../../../Smps/DisableSmpsDummy.o \
 	../../../Smps/IsSmpsEnabledStub.o \
 	../../../Smps/PollSmpsDummy.o \
 	../../PollAfterMotorDummy.o
+
+PWM_DUTY_CYCLE_FROM_REST_OBJ_FILES=\
+	PwmDutyCycleFromRestTest.o \
+	../PwmDutyCycleFromRestTestFixture.o \
+	$(TEST_DOUBLE_OBJ_FILES)
+
+PWM_DUTY_CYCLE_FOR_REVERSE_OBJ_FILES=\
+	PwmDutyCycleForReverseTest.o \
+	../PwmDutyCycleForReverseTestFixture.o \
+	$(TEST_DOUBLE_OBJ_FILES)
 
 all: $(HEX_FILES)
 
@@ -17,5 +26,8 @@ clean:
 
 PwmDutyCycleFromRestTest.hex: $(OBJ_FILES) $(PWM_DUTY_CYCLE_FROM_REST_OBJ_FILES)
 	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(PWM_DUTY_CYCLE_FROM_REST_OBJ_FILES)
+
+PwmDutyCycleForReverseTest.hex: $(OBJ_FILES) $(PWM_DUTY_CYCLE_FOR_REVERSE_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(PWM_DUTY_CYCLE_FOR_REVERSE_OBJ_FILES)
 
 include $(MAKEFILE_RULES)
