Added pulse steering for from-rest motor starts.

--- a/src/firmware-tests/Platform/Motor/Turn/AntiClockwise/Makefile
+++ b/src/firmware-tests/Platform/Motor/Turn/AntiClockwise/Makefile
@@ -1,14 +1,28 @@
 HEX_FILES=\
-	PwmDutyCycleFromRestTest.hex
+	PwmDutyCycleFromRestTest.hex \
+	PulseSteeringFromRestTest.hex \
+	PwmDutyCycleForReverseTest.hex
 
-PWM_DUTY_CYCLE_FROM_REST_OBJ_FILES=\
-	PwmDutyCycleFromRestTest.o \
-	../PwmDutyCycleFromRestTestFixture.o \
+TEST_DOUBLE_OBJ_FILES=\
 	../../../Smps/EnableSmpsDummy.o \
 	../../../Smps/DisableSmpsDummy.o \
 	../../../Smps/IsSmpsEnabledStub.o \
 	../../../Smps/PollSmpsDummy.o \
 	../../PollAfterMotorDummy.o
+
+PWM_DUTY_CYCLE_FROM_REST_OBJ_FILES=\
+	PwmDutyCycleFromRestTest.o \
+	../PwmDutyCycleFromRestTestFixture.o \
+	$(TEST_DOUBLE_OBJ_FILES)
+
+PULSE_STEERING_FROM_REST_OBJ_FILES=\
+	PulseSteeringFromRestTest.o \
+	$(TEST_DOUBLE_OBJ_FILES)
+
+PWM_DUTY_CYCLE_FOR_REVERSE_OBJ_FILES=\
+	PwmDutyCycleForReverseTest.o \
+	../PwmDutyCycleForReverseTestFixture.o \
+	$(TEST_DOUBLE_OBJ_FILES)
 
 all: $(HEX_FILES)
 
@@ -17,5 +31,11 @@ clean:
 
 PwmDutyCycleFromRestTest.hex: $(OBJ_FILES) $(PWM_DUTY_CYCLE_FROM_REST_OBJ_FILES)
 	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(PWM_DUTY_CYCLE_FROM_REST_OBJ_FILES)
+
+PulseSteeringFromRestTest.hex: $(OBJ_FILES) $(PULSE_STEERING_FROM_REST_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(PULSE_STEERING_FROM_REST_OBJ_FILES)
+
+PwmDutyCycleForReverseTest.hex: $(OBJ_FILES) $(PWM_DUTY_CYCLE_FOR_REVERSE_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(PWM_DUTY_CYCLE_FOR_REVERSE_OBJ_FILES)
 
 include $(MAKEFILE_RULES)
