--- a/src/firmware-tests/Platform/Isr/Makefile
+++ b/src/firmware-tests/Platform/Isr/Makefile
@@ -4,7 +4,8 @@ export OBJ_FILES=\
 	$(PLATFORM_CORE_OBJ_FILES) \
 	$(TEST_FIXTURE_OBJ_FILES) \
 	$(CURDIR)/../Lcd/LcdContrastDummies.o \
-	$(CURDIR)/../PowerManagementDummies.o
+	$(CURDIR)/../PowerManagementDummies.o \
+	$(CURDIR)/../Motor/MotorDummies.o
 
 TEST_DOUBLE_OBJ_FILES=\
 	InitialiseAfterIsrDummy.o \
@@ -14,10 +15,12 @@ TEST_DOUBLE_OBJ_FILES=\
 all: $(TEST_DOUBLE_OBJ_FILES)
 	$(MAKE) -C Initialisation all
 	$(MAKE) -C PreventSleep all
+	$(MAKE) -C Motor all
 
 clean:
 	$(RM) -f $(BUILD_ARTEFACT_PATTERN)
 	$(MAKE) -C Initialisation clean
 	$(MAKE) -C PreventSleep clean
+	$(MAKE) -C Motor clean
 
 include $(MAKEFILE_RULES)
