Added ISR condition to monitor the motor current only if the channel is correct.

--- a/src/firmware-tests/Platform/Isr/Motor/Makefile
+++ b/src/firmware-tests/Platform/Isr/Motor/Makefile
@@ -1,13 +1,21 @@
 HEX_FILES=\
-	FlagsTest.hex
+	FlagsTest.hex \
+	NonMotorAdcChannelTest.hex
 
-FLAGS_OBJ_FILES=\
-	FlagsTest.o \
+TEST_DOUBLE_OBJ_FILES=\
 	../InitialiseAfterIsrDummy.o \
 	../ClockDummies.o \
 	../../PowerManagement/PowerManagementDummies.o \
 	../../Smps/SmpsDummies.o \
 	$(PLATFORM_DIR)/Adc.a
+
+FLAGS_OBJ_FILES=\
+	FlagsTest.o \
+	$(TEST_DOUBLE_OBJ_FILES)
+
+NON_MOTOR_ADC_CHANNEL_OBJ_FILES=\
+	NonMotorAdcChannelTest.o \
+	$(TEST_DOUBLE_OBJ_FILES)
 
 all: $(HEX_FILES)
 
@@ -16,5 +24,8 @@ clean:
 
 FlagsTest.hex: $(OBJ_FILES) $(FLAGS_OBJ_FILES)
 	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(FLAGS_OBJ_FILES)
+
+NonMotorAdcChannelTest.hex: $(OBJ_FILES) $(NON_MOTOR_ADC_CHANNEL_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(NON_MOTOR_ADC_CHANNEL_OBJ_FILES)
 
 include $(MAKEFILE_RULES)
