Added motorStop() and optimised the soft start and stop algorithm (shortened in both time and space).

--- a/src/firmware-tests/Platform/Motor/Turn/Makefile
+++ b/src/firmware-tests/Platform/Motor/Turn/Makefile
@@ -5,10 +5,12 @@ TEST_FIXTURE_OBJ_FILES=\
 all: $(TEST_FIXTURE_OBJ_FILES)
 	$(MAKE) -C Clockwise all
 	$(MAKE) -C AntiClockwise all
+	$(MAKE) -C Stop all
 
 clean:
 	$(RM) -f $(BUILD_ARTEFACT_PATTERN)
 	$(MAKE) -C Clockwise clean
 	$(MAKE) -C AntiClockwise clean
+	$(MAKE) -C Stop clean
 
 include $(MAKEFILE_RULES)
