--- a/src/firmware-tests/Platform/Buttons/Initialisation/Makefile
+++ b/src/firmware-tests/Platform/Buttons/Initialisation/Makefile
@@ -1,12 +1,19 @@
 HEX_FILES=\
-	InitialisationChainTest.hex
-
-TEST_DOUBLE_OBJ_FILES=\
-	../PollAfterButtonsMock.o
+	InitialisationChainTest.hex \
+	InterruptOnChangeTest.hex \
+	ButtonStatesTest.hex
 
 INITIALISATION_CHAIN_OBJ_FILES=\
-	$(TEST_DOUBLE_OBJ_FILES) \
-	InitialisationChainTest.o
+	InitialisationChainTest.o \
+	../PollAfterButtonsMock.o
+
+INTERRUPT_ON_CHANGE_OBJ_FILES=\
+	InterruptOnChangeTest.o \
+	../PollAfterButtonsDummy.o
+
+BUTTON_STATES_OBJ_FILES=\
+	ButtonStatesTest.o \
+	../PollAfterButtonsDummy.o
 
 all: $(HEX_FILES)
 
@@ -15,5 +22,11 @@ clean:
 
 InitialisationChainTest.hex: $(OBJ_FILES) $(INITIALISATION_CHAIN_OBJ_FILES)
 	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(INITIALISATION_CHAIN_OBJ_FILES)
+
+InterruptOnChangeTest.hex: $(OBJ_FILES) $(INTERRUPT_ON_CHANGE_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(INTERRUPT_ON_CHANGE_OBJ_FILES)
+
+ButtonStatesTest.hex: $(OBJ_FILES) $(BUTTON_STATES_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(BUTTON_STATES_OBJ_FILES)
 
 include $(MAKEFILE_RULES)
