--- a/src/firmware-tests/Platform/Buttons/Makefile
+++ b/src/firmware-tests/Platform/Buttons/Makefile
@@ -4,7 +4,8 @@ export OBJ_FILES=\
 	$(FIRMWARE_CORE_OBJ_FILES) \
 	$(TEST_FIXTURE_OBJ_FILES) \
 	$(ASSERT_NO_ISR_OBJ_FILE) \
-	$(CURDIR)/InitialiseAfterButtonsMock.o
+	$(PLATFORM_DIR)/Timer0.o \
+	$(CURDIR)/../Timer0/InitialiseAfterTimer0Dummy.o
 
 TEST_DOUBLE_OBJ_FILES=\
 	InitialiseAfterButtonsMock.o \
