--- a/src/firmware-tests/Platform/Motor/EnableDisable/Makefile
+++ b/src/firmware-tests/Platform/Motor/EnableDisable/Makefile
@@ -9,6 +9,7 @@ TEST_DOUBLE_OBJ_FILES=\
 	../../Smps/EnableDisableSmpsMocks.o \
 	../../Smps/IsSmpsEnabledStub.o \
 	../../Smps/PollSmpsDummy.o \
+	../../Adc/AdcDummies.o \
 	../PollAfterMotorMock.o
 
 ENABLE_DISABLE_MOTOR_VDD_OBJ_FILES=\
