--- a/src/firmware-tests/Platform/Motor/Turn/AntiClockwise/Makefile
+++ b/src/firmware-tests/Platform/Motor/Turn/AntiClockwise/Makefile
@@ -2,13 +2,18 @@ HEX_FILES=\
 	PwmDutyCycleFromRestTest.hex \
 	PulseSteeringFromRestTest.hex \
 	PwmDutyCycleForReverseTest.hex \
-	PulseSteeringForReverseTest.hex
+	PulseSteeringForReverseTest.hex \
+	SetAdcChannelFromRestIsSuccessfulTest.hex \
+	SetAdcChannelFromRestIsUnsuccessfulTest.hex
 
 TEST_DOUBLE_OBJ_FILES=\
 	../../../Smps/EnableSmpsDummy.o \
 	../../../Smps/DisableSmpsDummy.o \
 	../../../Smps/IsSmpsEnabledStub.o \
 	../../../Smps/PollSmpsDummy.o \
+	../../../Adc/InitialiseAdcDummy.o \
+	../../../Adc/EnableDisableAdcDummies.o \
+	../../../Adc/ChannelStubs.o \
 	../../PollAfterMotorDummy.o
 
 PWM_DUTY_CYCLE_FROM_REST_OBJ_FILES=\
@@ -29,6 +34,16 @@ PULSE_STEERING_FOR_REVERSE_OBJ_FILES=\
 	PulseSteeringForReverseTest.o \
 	$(TEST_DOUBLE_OBJ_FILES)
 
+SET_ADC_CHANNEL_FROM_REST_IS_SUCCESSFUL_OBJ_FILES=\
+	SetAdcChannelFromRestIsSuccessfulTest.o \
+	../SetAdcChannelFromRestIsSuccessfulTestFixture.o \
+	$(TEST_DOUBLE_OBJ_FILES)
+
+SET_ADC_CHANNEL_FROM_REST_IS_UNSUCCESSFUL_OBJ_FILES=\
+	SetAdcChannelFromRestIsUnsuccessfulTest.o \
+	../SetAdcChannelFromRestIsUnsuccessfulTestFixture.o \
+	$(TEST_DOUBLE_OBJ_FILES)
+
 all: $(HEX_FILES)
 
 clean:
@@ -45,5 +60,11 @@ PwmDutyCycleForReverseTest.hex: $(OBJ_FILES) $(PWM_DUTY_CYCLE_FOR_REVERSE_OBJ_FI
 
 PulseSteeringForReverseTest.hex: $(OBJ_FILES) $(PULSE_STEERING_FOR_REVERSE_OBJ_FILES)
 	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(PULSE_STEERING_FOR_REVERSE_OBJ_FILES)
+
+SetAdcChannelFromRestIsSuccessfulTest.hex: $(OBJ_FILES) $(SET_ADC_CHANNEL_FROM_REST_IS_SUCCESSFUL_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(SET_ADC_CHANNEL_FROM_REST_IS_SUCCESSFUL_OBJ_FILES)
+
+SetAdcChannelFromRestIsUnsuccessfulTest.hex: $(OBJ_FILES) $(SET_ADC_CHANNEL_FROM_REST_IS_UNSUCCESSFUL_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(SET_ADC_CHANNEL_FROM_REST_IS_UNSUCCESSFUL_OBJ_FILES)
 
 include $(MAKEFILE_RULES)
