Started to think about the UI.  Added a rudimentary pre-processing capability to the Makefile to allow a firmware version string to be included in the LCD screens.

--- a/src/Makefile.rules
+++ b/src/Makefile.rules
@@ -1,5 +1,9 @@
 %.o: %.asm
 	$(AS) $(ASARGS) -o $@ $<
 
+%.pp.o: %.asm 
+	cat $< | sed "s/{{FIRMWARE_VER}}/$(FIRMWARE_VERSION)/g" > "`basename $< .asm`.pp.asm"
+	$(AS) $(ASARGS) -o $@ $<
+
 %.a: %
 	$(MAKE) -C $< all
